--- a/week10-12.md
+++ b/week10-12.md
@@ -1,4 +1,4 @@
-## **Modul Pembelajaran Mendalam Minggu 10-12: Paradigma dan Praktik Operasi Siber Defensif (DCO)**
+## **Modul Pembelajaran Minggu 10-12: Paradigma dan Praktik Operasi Siber Defensif (DCO)**
 
 **Abstrak**
 
